--- a/src/app/components/przejrzyj-oferte/przejrzyj-oferte.component.html
+++ b/src/app/components/przejrzyj-oferte/przejrzyj-oferte.component.html
@@ -56,8 +56,12 @@
       </div>
       <br/>
       <a mat-raised-button color="primary" [routerLink]="['/oferta/zlec', id]"
-         *ngIf="!oferta.zablokowana && oferta.aktywna && oferta.dataGodzinaWyjazdu >= data">Zleć transport przesylki</a>
-      <button mat-raised-button color="warn" (click)="zglosOferte()">Zgłoś oferte</button>
+         *ngIf="zalogowanyUzytkownik && !oferta.zablokowana && oferta.aktywna && oferta.dataGodzinaWyjazdu >= data">Zleć
+        transport przesylki</a>
+      <button mat-raised-button color="warn" (click)="zglosOferte()"
+              *ngIf="!zalogowanyUzytkownik || zalogowanyUzytkownik === null || zalogowanyUzytkownik.login !== oferta._embedded.uzytkownik.login">
+        Zgłoś oferte
+      </button>
       <button *ngIf="zalogowanyUzytkownik && zalogowanyUzytkownik.rola === 'ROLE_ADMIN'" mat-raised-button
               color="warn" (click)="zablokujOferte(oferta)">Zablokuj ofertę
       </button>
