--- a/src/app/components/zglaszanie-transakcji/zglaszanie-transakcji.component.html
+++ b/src/app/components/zglaszanie-transakcji/zglaszanie-transakcji.component.html
@@ -1,14 +1,14 @@
 <mat-card>
   <mat-card-title class="example-full-width">Formularz zgłaszania transakcji</mat-card-title>
   <mat-card-content>
-    <form class="example-form">
+    <form class="example-form" formGroup]="zglosTransakcjeForm">
 
       <mat-form-field class="example-full-width">
         <input matInput placeholder="Numer transakcji:" disabled value="15">
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
-        <mat-select [(value)]="selected" placeholder="Typ zgłaszanej uwagi">
+        <mat-select [(value)]="selected" placeholder="Typ zgłaszanej uwagi" formControlName="powod">
           <mat-option value="opcja1">Niezastosowanie się do warunków transakcji przez Kierowcę</mat-option>
           <mat-option value="opcja2">Niezastosowanie się do warunków transakcji przez Nadawcę</mat-option>
           <mat-option value="opcja3">Inne</mat-option>
@@ -18,7 +18,7 @@
       <p>Wybrałeś: {{selected}}</p>
 
       <mat-form-field class="example-full-width">
-        <textarea matInput placeholder="Treść uwagi:" rows="10"></textarea>
+        <textarea matInput placeholder="Treść uwagi:" rows="10" formControlName="tresc"></textarea>
       </mat-form-field>
       <button mat-raised-button>Anuluj</button>
       <button mat-raised-button color="primary">Wyślij</button>
