* UC: Wyszukaj ofertę * małe poprawki w kodzie

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
     </button>
     <div td-toolbar-content layout="row" layout-align="start center" flex>
       <img src="/assets/logo.png" alt="Logo FastCourier"/>
-      <span hide-xs class="tc-blue-500 mat-subhead">FastCourier</span>
+      <span hide-xs class="mat-subhead">FastCourier</span>
       <span flex></span>
       <span hide-xs>Magical Solutions</span>
       <button class="overflow-visible" mat-icon-button [matMenuTriggerFor]="notificationsMenu"
