--- a/src/app/components/przejrzyj-dostepne-oferty/przejrzyj-dostepne-oferty.component.css
+++ b/src/app/components/przejrzyj-dostepne-oferty/przejrzyj-dostepne-oferty.component.css
@@ -1,3 +1,7 @@
 .mat-progress-spinner {
   margin: 0 auto;
 }
+
+mat-icon.material-icons, mat-icon.material-icons.mat-icon {
+  vertical-align: middle;
+}
