--- a/src/theme.scss
+++ b/src/theme.scss
@@ -12,7 +12,7 @@ $material-design-icons-font-path: "../node_modules/material-design-icons-iconfon
 
 @include mat-core();
 
-$primary: mat-palette($mat-brown, 600, 400, 800);
+$primary: mat-palette($mat-blue-grey, 600, 500, 400);
 $accent: mat-palette($mat-amber, 500, 300, 700);
 $warn: mat-palette($mat-red, 500, 300, 900);
 
