--- a/src/app/components/zarzadzaj-transakcjami/zarzadzaj-transakcjami.component.css
+++ b/src/app/components/zarzadzaj-transakcjami/zarzadzaj-transakcjami.component.css
@@ -5,3 +5,7 @@
 .mat-chip-list-wrapper {
   margin: 10px 0;
 }
+
+mat-icon.material-icons, mat-icon.material-icons.mat-icon {
+  vertical-align: middle;
+}
