--- a/src/app/components/zarzadzaj-transakcjami/zarzadzaj-transakcjami.component.html
+++ b/src/app/components/zarzadzaj-transakcjami/zarzadzaj-transakcjami.component.html
@@ -12,7 +12,13 @@
 
       <ng-container matColumnDef="tytul">
         <mat-header-cell *matHeaderCellDef flex-gt-xs="40"> Tytuł oferty</mat-header-cell>
-        <mat-cell *matCellDef="let element" flex-gt-xs="40"><a mat-icon-button
+        <mat-cell *matCellDef="let element" flex-gt-xs="40">
+          <div style="margin: 3px 8px;">
+            <mat-icon style="margin-right: 8px;" color="accent" aria-label="Kierunek">card_travel</mat-icon>
+            <span>{{ element.dotyczyOferty.miastoPoczatkowe }}</span>
+            <mat-icon aria-hidden="true">arrow_forward</mat-icon>
+            <span>{{ element.dotyczyOferty.miastoDocelowe }}</span></div>
+          <a mat-icon-button
                                                                [routerLink]="['/oferta/wyswietl', element.dotyczyOferty.id]"
                                                                color="accent">
           <mat-icon aria-label="Przejdź do oferty">assignment</mat-icon>
@@ -78,7 +84,13 @@
 
       <ng-container matColumnDef="tytul">
         <mat-header-cell *matHeaderCellDef flex-gt-xs="25"> Tytuł oferty</mat-header-cell>
-        <mat-cell *matCellDef="let element" flex-gt-xs="25"><a mat-icon-button
+        <mat-cell *matCellDef="let element" flex-gt-xs="25">
+          <div style="margin: 3px 8px;">
+            <mat-icon style="margin-right: 8px;" color="accent" aria-label="Kierunek">card_travel</mat-icon>
+            <span>{{ element.dotyczyOferty.miastoPoczatkowe }}</span>
+            <mat-icon aria-hidden="true">arrow_forward</mat-icon>
+            <span>{{ element.dotyczyOferty.miastoDocelowe }}</span></div>
+          <a mat-icon-button
                                                                [routerLink]="['/oferta/wyswietl', element.dotyczyOferty.id]"
                                                                color="accent">
           <mat-icon aria-label="Przejdź do oferty">assignment</mat-icon>
