UC: Przejrzyj oceny

--- a/src/app/components/przejrzyj-profil/przejrzyj-profil.component.css
+++ b/src/app/components/przejrzyj-profil/przejrzyj-profil.component.css
@@ -22,3 +22,8 @@
 .mat-progress-spinner {
   margin: 0 auto;
 }
+
+mat-icon.material-icons, mat-icon.material-icons.mat-icon {
+  vertical-align: middle;
+}
+
